--- a/_posts/2021-11-29-AL Chapter 2.md
+++ b/_posts/2021-11-29-AL Chapter 2.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Quicksort Algorithm Experiment"
+title: "Chapter 2: Quicksort Algorithm Experiment"
 categories: Algorithm
 toc: true
 ---
