--- a/_posts/2022-01-30-DA Chapter 2.md
+++ b/_posts/2022-01-30-DA Chapter 2.md
@@ -1,1 +1,22 @@
+---
+layout: single
+title: "Chapter 2: Data Mining"
+categories: Data
+toc: true
+---
 
+<h3>We need data mining.</h3><br>
+We need data mining to run the business better. Data mining is a process of discovering hidden information from data using a broad range of techniques (we will discuss about those later). This might sound hard, but see the following examples:
+
+<br>
+
+Amazon suggesting for things that a user might also like, Gmail recognizing some emails as spam, and YouTube Music playing songs that a user might prefer for next playlist are good examples of data mining. Again, it's a process of <b>discovering HIDDEN INFORMATION from data</b>. We use information we already know to get information that we want to predict. The ability to formulate a real world problem into classic data mining problems is critical.
+
+<br>
+
+There are few types of problem in data: classification, regression, clustering, co-occurrence grouping, and data reduction. Here are simple definitions of those:
+1. classification: predicting a categorical target (Male/Female)
+2. regression: prediction a numeric target (sales)
+3. clustering: grouping by similarity
+4. co-occurrence grouping: finding associations
+5. data reduction: replacing a large data with a smaller set
